2025-11-06T02:01:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19122377449 # 800
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-06
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 199 266 / 200 267
* notice: next accum: outdated-unq outdated-all / unq all: 200 267 / 204 271
* notice: prev exec diff / last date diff / accum: unq all: +4 +4 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-26] / [2025-10-25 2025-10-30 2025-10-31 2025-11-03]

2025-10-07T00:53:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18298692230 # 789
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-07
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 198 265 / 200 267
* notice: next accum: outdated-unq outdated-all / unq all: 199 266 / 200 267
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-09-22] / []

2025-10-06T00:54:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18266910837 # 788
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-06
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 197 264 / 200 267
* notice: next accum: outdated-unq outdated-all / unq all: 198 265 / 200 267
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-09-21] / []

2025-10-05T00:58:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18251774566 # 787