@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-06T02:01:43Z",
-  "count_outdated" : 267,
-  "uniques_outdated" : 200,
+  "timestamp" : "2025-11-09T02:05:00Z",
+  "count_outdated" : 268,
+  "uniques_outdated" : 201,
   "count" : 271,
   "uniques" : 204,
   "clones" : [
-    {
-      "timestamp": "2025-10-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-10-30T00:00:00Z",
       "count": 1,
